--- a/sections/multicolumn.liquid
+++ b/sections/multicolumn.liquid
@@ -126,17 +126,19 @@
                   <div class="rte">{{ block.settings.text }}</div>
                 {%- endif -%}
                 {%- if block.settings.link_label != blank -%}
-                  <a
-                    class="link animate-arrow"
-                    {% if block.settings.link == blank %}
-                      role="link" aria-disabled="true"
-                    {% else %}
-                      href="{{ block.settings.link }}"
-                    {% endif %}
-                  >
-                    {{- block.settings.link_label | escape -}}
-                    <span class="icon-wrap">{% render 'icon-arrow-full' %}</span></a
-                  >
+                  <div class="link__wrapper">
+                    <a
+                      class="link animate-arrow"
+                      {% if block.settings.link == blank %}
+                        role="link" aria-disabled="true"
+                      {% else %}
+                        href="{{ block.settings.link }}"
+                      {% endif %}
+                    >
+                      {{- block.settings.link_label | escape -}}
+                      <span class="icon-wrap">{% render 'icon-arrow-full' %}</span></a
+                    >
+                  </div>
                 {%- endif -%}
               </div>
             </div>
