--- a/snippets/header-mega-menu.liquid
+++ b/snippets/header-mega-menu.liquid
@@ -35,7 +35,9 @@
                   role="list"
                 >
                   {%- for childlink in link.links -%}
+                    {% assign menu_image_url = childlink.object.linked_collection.value.image | img_url: 'master' %}
                     <li>
+                      <img src="{{ menu_image_url }}">
                       <a
                         id="HeaderMenu-{{ link.handle }}-{{ childlink.handle }}"
                         href="{{ childlink.url }}"
