--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -99,11 +99,11 @@
 <script src="{{ 'cart-notification.js' | asset_url }}" defer="defer"></script>
 
 <svg xmlns="http://www.w3.org/2000/svg" class="hidden">
-  <symbol id="icon-search" viewBox="0 0 32 32" fill="none" width="32" height="32">
-    <path d="M21 21L16.65 16.65M19 11C19 15.4183 15.4183 19 11 19C6.58172 19 3 15.4183 3 11C3 6.58172 6.58172 3 11 3C15.4183 3 19 6.58172 19 11Z" stroke="#231F20" stroke-width="2" stroke-miterlimit="3.8637" stroke-linecap="square"/>
+  <symbol id="icon-search" class="icon icon-search" fill="none" viewBox="0 0 32 32" stroke="#231F20" stroke-width="2" stroke-miterlimit="3.8637" stroke-linecap="square">
+    <path d="M28 28L20.6833 20.6833M23.5556 13.7778C23.5556 19.1779 19.1779 23.5556 13.7778 23.5556C8.37766 23.5556 4 19.1779 4 13.7778C4 8.37766 8.37766 4 13.7778 4C19.1779 4 23.5556 8.37766 23.5556 13.7778Z" />
   </symbol>
 
-  <symbol id="icon-reset" class="icon icon-close"  fill="none" viewBox="0 0 18 18" stroke="currentColor">
+  <symbol id="icon-reset" class="icon icon-close" fill="none" viewBox="0 0 18 18" stroke="currentColor">
     <circle r="8.5" cy="9" cx="9" stroke-opacity="0.2"/>
     <path d="M6.82972 6.82915L1.17193 1.17097" stroke-linecap="round" stroke-linejoin="round" transform="translate(5 5)"/>
     <path d="M1.22896 6.88502L6.77288 1.11523" stroke-linecap="round" stroke-linejoin="round" transform="translate(5 5)"/>
