--- a/assets/component-predictive-search.css
+++ b/assets/component-predictive-search.css
@@ -19,7 +19,7 @@
 
 .predictive-search--search-template {
   z-index: 2;
-  width: calc(100% + 0.2rem);
+  width: 100vw;
 }
 
 .predictive-search__results-groups-wrapper {
@@ -50,7 +50,10 @@
 @media screen and (min-width: 750px) {
   .predictive-search {
     border-top: none;
-    width: calc(100% + 0.2rem);
+    width: 100vw;
+    top: 165px;
+    left: 0;
+    position: fixed;
   }
 
   .header predictive-search {
